# zolletta-metaskill

./: .bump  .coverage  .gitignore  CHANGELOG.md  PLAN-MASTER.md  PLAN-PHP-CODE-STYLE.md  PLAN-PHP-SUPPORT.md  PLAN-SETUP-COMMAND.md  PLAN-TEST-RECOVERY.md  README.md  SKILL.md  codecov.yml  install.sh  plan-to-recover.md  pyproject.toml  zolletta-metaskill
.github/workflows/: quality.yml  tests.yml
docs/: index.md
docs/how-to/: install.md  run-full-review.md  setup-project.md
docs/reference/: frontmatter.md  index.md  reports.md  settings-schema.md  subcommands.md  tool-messages.md
docs/tutorials/: getting-started.md
documentor/: SKILL.md
documentor/assets/: drift_report_template.md  report_template.md
documentor/references/: drift_prevention_guide.md  operational-rules.md  scoring-categories-and-troubleshooting.md  workflows-and-tool-reference.md
documentor/scripts/: doc_staleness_scorer.py  drift_analyzer.py  link_checker.py
external-review/: SKILL.md
patterns/: SKILL.md
patterns/assets/: report_template.md
patterns/references/: python-review.md  scripts.md  troubleshooting.md
php-code-style/: SKILL.md
php-code-style/assets/: report_template.md
php-testing-patterns/: SKILL.md
php-testing-patterns/assets/: phpunit-coverage-template.xml  report_template.md
python-code-style/: SKILL.md
python-code-style/assets/: acronyms.json  report_template.md
python-testing-patterns/: SKILL.md
python-testing-patterns/assets/: report_template.md
python-testing-patterns/references/: details.md
reference/: code-exploration.md  documentation_standards.md  general-principles.md  python-review.md  review-mode.md  scripts.md  settings-schema.md  tool-messages.md
review/: SKILL.md
review/assets/: summary_template.md  todo_template.md
scripts/: .bump
setup/: SKILL.md
tests/: conftest.py
(+117 files in other folders)
