[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zolletta-metaskill"
version = "2.0.0"
description = "Generic code review skills with specializations for Python and other languages"
readme = "README.md"
license = { text = "MIT + Commons Clause" }
requires-python = ">=3.12"
authors = [{ name = "Zolletta" }]
keywords = ["code-review", "static-analysis", "solid", "design-patterns", "documentation-drift"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
php = [
    "tree-sitter>=0.26.0",
    "tree-sitter-php>=0.24.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "ty>=0.0.1",
    "vulture>=2.10",
]

[project.urls]
Homepage = "https://github.com/Zolletta/zolletta-metaskill"

[tool.hatch.build.targets.wheel]
packages = ["src/zolletta_metaskill"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "D", "UP", "T20", "SIM"]
ignore = ["B008", "T201", "D104", "D107", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D105"]

[tool.ruff.lint.isort]
known-first-party = ["zolletta_metaskill"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["zolletta-metaskill/"]

[tool.pytest.ini_options]
addopts = ["-ra", "--tb=short"]
testpaths = ["tests"]
minversion = "8.0"

[tool.vulture]
min_confidence = 80
